--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="Core.jar"/>
 	<classpathentry exported="true" kind="lib" path="flatlaf-3.5.1.jar"/>
+	<classpathentry kind="lib" path="gson-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
