--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.1.jar=/home/hdr/Downloads/flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-1=flatlaf-3.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.5.1.jar}:\
     ${reference.TASkOcupadoCore.jar}:\
-    ${reference.TASkOcupadoExt.jar}
+    ${reference.TASkOcupadoExt.jar}:\
+    ${file.reference.flatlaf-3.5.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
