--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,15 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
-file.reference.flatlaf-3.5.1.jar=/home/hdr/Downloads/flatlaf-3.5.1.jar
-file.reference.flatlaf-3.5.1.jar-1=flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar=flatlaf-3.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-3.5.1.jar}:\
     ${reference.TASkOcupadoCore.jar}:\
     ${reference.TASkOcupadoExt.jar}:\
-    ${file.reference.flatlaf-3.5.1.jar-1}
+    ${file.reference.flatlaf-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
