--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.1.jar=flatlaf-3.5.1.jar
+file.reference.gson-2.11.0.jar=gson-2.11.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.TASkOcupadoCore.jar}:\
     ${reference.TASkOcupadoExt.jar}:\
-    ${file.reference.flatlaf-3.5.1.jar}
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.gson-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
