--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,23 +35,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
-file.reference.angus-activation-2.0.2.jar=angus-activation-2.0.2.jar
-file.reference.flatlaf-3.5.1.jar=flatlaf-3.5.1.jar
-file.reference.gson-2.11.0.jar=gson-2.11.0.jar
-file.reference.jakarta.activation-api-2.1.3.jar=jakarta.activation-api-2.1.3.jar
-file.reference.jakarta.mail-2.0.3.jar=jakarta.mail-2.0.3.jar
-file.reference.jakarta.mail-api-2.1.3.jar-1=jakarta.mail-api-2.1.3.jar
+file.reference.angus-activation-2.0.2.jar=lib/angus-activation-2.0.2.jar
+file.reference.flatlaf-3.5.1.jar=lib/flatlaf-3.5.1.jar
+file.reference.gson-2.11.0.jar=lib/gson-2.11.0.jar
+file.reference.jakarta.activation-api-2.1.3.jar=lib/jakarta.activation-api-2.1.3.jar
+file.reference.jakarta.mail-2.0.3.jar=lib/jakarta.mail-2.0.3.jar
+file.reference.jakarta.mail-api-2.1.3.jar=lib/jakarta.mail-api-2.1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.TASkOcupadoCore.jar}:\
     ${reference.TASkOcupadoExt.jar}:\
+    ${file.reference.angus-activation-2.0.2.jar}:\
     ${file.reference.flatlaf-3.5.1.jar}:\
     ${file.reference.gson-2.11.0.jar}:\
-    ${file.reference.angus-activation-2.0.2.jar}:\
     ${file.reference.jakarta.activation-api-2.1.3.jar}:\
     ${file.reference.jakarta.mail-2.0.3.jar}:\
-    ${file.reference.jakarta.mail-api-2.1.3.jar-1}
+    ${file.reference.jakarta.mail-api-2.1.3.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
