--- a/.gitignore
+++ b/.gitignore
@@ -118,12 +118,7 @@ tmp/
 
 # Package Files #
 *.jar
-!angus-activation-2.0.2.jar
-!flatlaf-3.5.1.jar
-!gson-2.11.0.jar
-!jakarta.activation-api-2.1.3.jar
-!jakarta.mail-2.0.3.jar
-!jakarta.mail-api-2.1.3.jar
+!lib/*.jar
 *.war
 *.nar
 *.ear
