--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,9 @@ file.reference.gson-2.11.0.jar=lib/gson-2.11.0.jar
 file.reference.jakarta.activation-api-2.1.3.jar=lib/jakarta.activation-api-2.1.3.jar
 file.reference.jakarta.mail-2.0.3.jar=lib/jakarta.mail-2.0.3.jar
 file.reference.jakarta.mail-api-2.1.3.jar=lib/jakarta.mail-api-2.1.3.jar
+file.reference.telegrambots-6.7.0-jar-with-dependencies.jar=lib/telegrambots-6.7.0-jar-with-dependencies.jar
+file.reference.telegrambots-6.7.0-javadoc.jar=lib/telegrambots-6.7.0-javadoc.jar
+file.reference.telegrambots-6.7.0-sources.jar-1=lib/telegrambots-6.7.0-sources.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +54,11 @@ javac.classpath=\
     ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.jakarta.activation-api-2.1.3.jar}:\
     ${file.reference.jakarta.mail-2.0.3.jar}:\
-    ${file.reference.jakarta.mail-api-2.1.3.jar}
+    ${file.reference.jakarta.mail-api-2.1.3.jar}:\
+    ${reference.TelegramNotificator.jar}:\
+    ${file.reference.telegrambots-6.7.0-jar-with-dependencies.jar}:\
+    ${file.reference.telegrambots-6.7.0-javadoc.jar}:\
+    ${file.reference.telegrambots-6.7.0-sources.jar-1}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
@@ -93,8 +100,10 @@ mkdist.disabled=false
 platform.active=default_platform
 project.TASkOcupadoCore=../TASkOcupadoCore
 project.TASkOcupadoExt=../TASkOcupadoExt
+project.TelegramNotificator=../TelegramNotificator
 reference.TASkOcupadoCore.jar=${project.TASkOcupadoCore}/dist/TASkOcupadoCore.jar
 reference.TASkOcupadoExt.jar=${project.TASkOcupadoExt}/dist/TASkOcupadoExt.jar
+reference.TelegramNotificator.jar=${project.TelegramNotificator}/dist/TelegramNotificator.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
