--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.gson-2.11.0.jar=lib/gson-2.11.0.jar
 file.reference.jakarta.activation-api-2.1.3.jar=lib/jakarta.activation-api-2.1.3.jar
 file.reference.jakarta.mail-2.0.3.jar=lib/jakarta.mail-2.0.3.jar
 file.reference.jakarta.mail-api-2.1.3.jar=lib/jakarta.mail-api-2.1.3.jar
+file.reference.Resources-Classes=../../.TASkOcupado/Resources/Classes
 file.reference.telegrambots-6.7.0-jar-with-dependencies.jar=lib/telegrambots-6.7.0-jar-with-dependencies.jar
 file.reference.telegrambots-6.7.0-javadoc.jar=lib/telegrambots-6.7.0-javadoc.jar
 file.reference.telegrambots-6.7.0-sources.jar-1=lib/telegrambots-6.7.0-sources.jar
@@ -58,7 +59,8 @@ javac.classpath=\
     ${reference.TelegramNotificator.jar}:\
     ${file.reference.telegrambots-6.7.0-jar-with-dependencies.jar}:\
     ${file.reference.telegrambots-6.7.0-javadoc.jar}:\
-    ${file.reference.telegrambots-6.7.0-sources.jar-1}
+    ${file.reference.telegrambots-6.7.0-sources.jar-1}:\
+    ${file.reference.Resources-Classes}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
