--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,8 +49,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.TASkOcupadoCore.jar}:\
-    ${reference.TASkOcupadoExt.jar}:\
     ${file.reference.angus-activation-2.0.2.jar}:\
+    ${reference.EmailNotificator.jar}:\
     ${file.reference.flatlaf-3.5.1.jar}:\
     ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.jakarta.activation-api-2.1.3.jar}:\
@@ -100,11 +100,11 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.EmailNotificator=../EmailNotificator
 project.TASkOcupadoCore=../TASkOcupadoCore
-project.TASkOcupadoExt=../TASkOcupadoExt
 project.TelegramNotificator=../TelegramNotificator
+reference.EmailNotificator.jar=${project.EmailNotificator}/dist/EmailNotificator.jar
 reference.TASkOcupadoCore.jar=${project.TASkOcupadoCore}/dist/TASkOcupadoCore.jar
-reference.TASkOcupadoExt.jar=${project.TASkOcupadoExt}/dist/TASkOcupadoExt.jar
 reference.TelegramNotificator.jar=${project.TelegramNotificator}/dist/TelegramNotificator.jar
 run.classpath=\
     ${javac.classpath}:\
