--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,30 +36,32 @@ dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
 file.reference.angus-activation-2.0.2.jar=lib/angus-activation-2.0.2.jar
+file.reference.EmailNotificator.jar=/home/hdr/.TASkOcupado/Extensions/EmailNotificator.jar
 file.reference.flatlaf-3.5.1.jar=lib/flatlaf-3.5.1.jar
 file.reference.gson-2.11.0.jar=lib/gson-2.11.0.jar
 file.reference.jakarta.activation-api-2.1.3.jar=lib/jakarta.activation-api-2.1.3.jar
 file.reference.jakarta.mail-2.0.3.jar=lib/jakarta.mail-2.0.3.jar
 file.reference.jakarta.mail-api-2.1.3.jar=lib/jakarta.mail-api-2.1.3.jar
-file.reference.Resources-Classes=C:\\Users\\Gonza\\.TASkOcupado\\Resources\\Classes
+file.reference.Resources-Classes=/home/hdr/.TASkOcupado/Resources/Classes
 file.reference.telegrambots-6.7.0-jar-with-dependencies.jar=lib/telegrambots-6.7.0-jar-with-dependencies.jar
 file.reference.telegrambots-6.7.0-javadoc.jar=lib/telegrambots-6.7.0-javadoc.jar
 file.reference.telegrambots-6.7.0-sources.jar-1=lib/telegrambots-6.7.0-sources.jar
+file.reference.TelegramNotificator.jar=/home/hdr/.TASkOcupado/Extensions/TelegramNotificator.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.TASkOcupadoCore.jar}:\
     ${file.reference.angus-activation-2.0.2.jar}:\
-    ${reference.EmailNotificator.jar}:\
     ${file.reference.flatlaf-3.5.1.jar}:\
     ${file.reference.gson-2.11.0.jar}:\
     ${file.reference.jakarta.activation-api-2.1.3.jar}:\
     ${file.reference.jakarta.mail-2.0.3.jar}:\
     ${file.reference.jakarta.mail-api-2.1.3.jar}:\
-    ${reference.TelegramNotificator.jar}:\
     ${file.reference.telegrambots-6.7.0-jar-with-dependencies.jar}:\
     ${file.reference.telegrambots-6.7.0-javadoc.jar}:\
     ${file.reference.telegrambots-6.7.0-sources.jar-1}:\
+    ${file.reference.EmailNotificator.jar}:\
+    ${file.reference.TelegramNotificator.jar}:\
     ${file.reference.Resources-Classes}
 javac.compilerargs=
 javac.deprecation=false
@@ -100,12 +102,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.EmailNotificator=../EmailNotificator
 project.TASkOcupadoCore=../TASkOcupadoCore
-project.TelegramNotificator=../TelegramNotificator
-reference.EmailNotificator.jar=${project.EmailNotificator}/dist/EmailNotificator.jar
 reference.TASkOcupadoCore.jar=${project.TASkOcupadoCore}/dist/TASkOcupadoCore.jar
-reference.TelegramNotificator.jar=${project.TelegramNotificator}/dist/TelegramNotificator.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
