--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/TASkOcupadoUI
 endorsed.classpath=
 excludes=
 file.reference.angus-activation-2.0.2.jar=lib/angus-activation-2.0.2.jar
+file.reference.EmailNotifier.jar=..\\..\\.TASkOcupado\\Extensions\\EmailNotifier.jar
 file.reference.flatlaf-3.5.1.jar=lib/flatlaf-3.5.1.jar
 file.reference.gson-2.11.0.jar=lib/gson-2.11.0.jar
 file.reference.jakarta.activation-api-2.1.3.jar=lib/jakarta.activation-api-2.1.3.jar
@@ -45,6 +46,7 @@ file.reference.Resources-Classes=../../.TASkOcupado/Resources/Classes
 file.reference.telegrambots-6.7.0-jar-with-dependencies.jar=lib/telegrambots-6.7.0-jar-with-dependencies.jar
 file.reference.telegrambots-6.7.0-javadoc.jar=lib/telegrambots-6.7.0-javadoc.jar
 file.reference.telegrambots-6.7.0-sources.jar-1=lib/telegrambots-6.7.0-sources.jar
+file.reference.TelegramNotifier.jar=..\\..\\.TASkOcupado\\Extensions\\TelegramNotifier.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +62,9 @@ javac.classpath=\
     ${file.reference.telegrambots-6.7.0-jar-with-dependencies.jar}:\
     ${file.reference.telegrambots-6.7.0-javadoc.jar}:\
     ${file.reference.telegrambots-6.7.0-sources.jar-1}:\
-    ${file.reference.Resources-Classes}
+    ${file.reference.Resources-Classes}:\
+    ${file.reference.EmailNotifier.jar}:\
+    ${file.reference.TelegramNotifier.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
