--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,8 @@ javac.classpath=\
     ${file.reference.telegrambots-6.7.0-jar-with-dependencies.jar}:\
     ${file.reference.telegrambots-6.7.0-javadoc.jar}:\
     ${file.reference.telegrambots-6.7.0-sources.jar-1}:\
-    ${file.reference.Resources-Classes}
+    ${file.reference.Resources-Classes}:\
+    ${reference.AssignmentLogger.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
@@ -98,7 +99,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.AssignmentLogger=../AssignmentLogger
 project.TASkOcupadoCore=../TASkOcupadoCore
+reference.AssignmentLogger.jar=${project.AssignmentLogger}/dist/AssignmentLogger.jar
 reference.TASkOcupadoCore.jar=${project.TASkOcupadoCore}/dist/TASkOcupadoCore.jar
 run.classpath=\
     ${javac.classpath}:\
